// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatIntegrationAppearance component should display correctly when creating a new chat integration 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations/smooch_inside"
          >
            Chat
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          New chat integration
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <div
            className="form"
          >
            <div
              className="fieldset"
            >
              <InputField
                label="Chat title"
                onChange={[Function]}
                placeholder="Ex: Company Support"
                required={true}
                type="text"
                value=""
              />
              <InputField
                label="Introduction text during business hours"
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="What can we do for you?"
              />
              <InputField
                label="Introduction text outside business hours"
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="We're away!"
              />
              <InputField
                label="Input placeholder"
                onChange={[Function]}
                type="text"
                value="Type a message..."
              />
              <ColorField
                label="Main color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <ColorField
                label="Conversation color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
            </div>
          </div>
          <Button
            className=""
            color="success"
            disabled={false}
            tag="button"
            type="submit"
          >
            Add new chat
          </Button>
        </Form>
      </Col>
      <Col
        className="p-0"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="d-flex justify-content-center align-items-center"
          style={
            Object {
              "width": "30em",
            }
          }
        >
          <ButtonGroup
            className="mb-3"
            role="group"
            tag="div"
          >
            <Button
              color="info"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              During business hours
            </Button>
            <Button
              color="secondary"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              Outside business hours
            </Button>
          </ButtonGroup>
        </div>
        <ChatIntegrationPreview
          conversationColor="#0d87dd"
          currentUser={Immutable.Map {}}
          inputPlaceholder="Type a message..."
          introductionText="What can we do for you?"
          isOnline={true}
          mainColor="#0d87dd"
          name=""
          offlineIntroductionText="We're away!"
        />
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`ChatIntegrationAppearance component should display correctly when integration is loading 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations/smooch_inside"
          >
            Chat
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          hellosmoochintegration
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          Appearance
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <ChatIntegrationNavigation
    integration={
      Immutable.Map {
        "id": 2,
        "name": "hellosmoochintegration",
        "type": "smooch_inside",
      }
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <div
            className="form"
          >
            <div
              className="fieldset"
            >
              <InputField
                label="Chat title"
                onChange={[Function]}
                placeholder="Ex: Company Support"
                required={true}
                type="text"
                value="hellosmoochintegration"
              />
              <InputField
                label="Introduction text during business hours"
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="What can we do for you?"
              />
              <InputField
                label="Introduction text outside business hours"
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="We're away!"
              />
              <InputField
                label="Input placeholder"
                onChange={[Function]}
                type="text"
                value="Type a message..."
              />
              <ColorField
                label="Main color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <ColorField
                label="Conversation color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
            </div>
          </div>
          <Button
            className="btn-loading"
            color="success"
            disabled={true}
            tag="button"
            type="submit"
          >
            Save changes
          </Button>
          <ConfirmButton
            className="float-right"
            color="secondary"
            confirm={[Function]}
            confirmColor="success"
            content="Are you sure you want to delete this integration?"
            disabled={false}
            loading={false}
            placement="bottom"
            skip={false}
            title="Are you sure?"
            type="button"
          >
            <i
              className="material-icons mr-1 text-danger"
            >
              delete
            </i>
            Delete chat
          </ConfirmButton>
        </Form>
      </Col>
      <Col
        className="p-0"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="d-flex justify-content-center align-items-center"
          style={
            Object {
              "width": "30em",
            }
          }
        >
          <ButtonGroup
            className="mb-3"
            role="group"
            tag="div"
          >
            <Button
              color="info"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              During business hours
            </Button>
            <Button
              color="secondary"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              Outside business hours
            </Button>
          </ButtonGroup>
        </div>
        <ChatIntegrationPreview
          conversationColor="#0d87dd"
          currentUser={Immutable.Map {}}
          inputPlaceholder="Type a message..."
          introductionText="What can we do for you?"
          isOnline={true}
          mainColor="#0d87dd"
          name="hellosmoochintegration"
          offlineIntroductionText="We're away!"
        />
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`ChatIntegrationAppearance component should display correctly when updating an existing integration 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations/smooch_inside"
          >
            Chat
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          hellosmoochintegration
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          Appearance
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <ChatIntegrationNavigation
    integration={
      Immutable.Map {
        "id": 2,
        "name": "hellosmoochintegration",
        "type": "smooch_inside",
      }
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <div
            className="form"
          >
            <div
              className="fieldset"
            >
              <InputField
                label="Chat title"
                onChange={[Function]}
                placeholder="Ex: Company Support"
                required={true}
                type="text"
                value="hellosmoochintegration"
              />
              <InputField
                label="Introduction text during business hours"
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="What can we do for you?"
              />
              <InputField
                label="Introduction text outside business hours"
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="We're away!"
              />
              <InputField
                label="Input placeholder"
                onChange={[Function]}
                type="text"
                value="Type a message..."
              />
              <ColorField
                label="Main color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <ColorField
                label="Conversation color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
            </div>
          </div>
          <Button
            className=""
            color="success"
            disabled={false}
            tag="button"
            type="submit"
          >
            Save changes
          </Button>
          <ConfirmButton
            className="float-right"
            color="secondary"
            confirm={[Function]}
            confirmColor="success"
            content="Are you sure you want to delete this integration?"
            disabled={false}
            loading={false}
            placement="bottom"
            skip={false}
            title="Are you sure?"
            type="button"
          >
            <i
              className="material-icons mr-1 text-danger"
            >
              delete
            </i>
            Delete chat
          </ConfirmButton>
        </Form>
      </Col>
      <Col
        className="p-0"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="d-flex justify-content-center align-items-center"
          style={
            Object {
              "width": "30em",
            }
          }
        >
          <ButtonGroup
            className="mb-3"
            role="group"
            tag="div"
          >
            <Button
              color="info"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              During business hours
            </Button>
            <Button
              color="secondary"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              Outside business hours
            </Button>
          </ButtonGroup>
        </div>
        <ChatIntegrationPreview
          conversationColor="#0d87dd"
          currentUser={Immutable.Map {}}
          inputPlaceholder="Type a message..."
          introductionText="What can we do for you?"
          isOnline={true}
          mainColor="#0d87dd"
          name="hellosmoochintegration"
          offlineIntroductionText="We're away!"
        />
      </Col>
    </Row>
  </Container>
</div>
`;
